--- a/site/public/login.html
+++ b/site/public/login.html
@@ -26,10 +26,10 @@
     <div class="flexbox">
         <h1>Bem-vindo à Diários de Mystic Falls</h1>
         <h2>Faça login para acessar sua conta</h2>
-        <h3>Nome de Usuário</h3>
-        <input id="email_input" class="camposDeEntrada">
+        <h3>Insira seu e-mail</h3>
+        <input id="email_input" class="camposDeEntrada">        
         <h3>Senha</h3>
-        <input id="senha_input" class="camposDeEntrada">
+        <input id="senha_input" class="camposDeEntrada" type="password">
 
         <h4><a href="#">Esqueceu sua senha?</a></h4>
 
