--- a/site/public/login.html
+++ b/site/public/login.html
@@ -84,6 +84,7 @@
                 senhaServer: senhaVar
             })
         }).then(function (resposta) {
+         
             console.log("ESTOU NO THEN DO entrar()!")
 
             if (resposta.ok) {
@@ -96,6 +97,8 @@
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
                     sessionStorage.DIARIOS = JSON.stringify(json.DIARIOS)
+
+                    const idUsuarioLogado = json.id;
 
                     setTimeout(function () {
                         window.location = "diario.html";
