--- a/site/public/login.html
+++ b/site/public/login.html
@@ -96,7 +96,7 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
-                    sessionStorage.DIARIOS = JSON.stringify(json.diarios);
+                    // sessionStorage.DIARIOS = JSON.stringify(json.diarios);
                  
 
                     setTimeout(function () {
