--- a/site/public/diario.html
+++ b/site/public/diario.html
@@ -82,19 +82,19 @@
                     <div class="caixinhaBotao">
                         <div class="boxBotao">
                             <button>
+                                <span onclick="criar()">CRIAR NOVO</span>
+                            </button>
+                        </div>
+
+                        <div class="boxBotao">
+                            <button>
                                 <span onclick="editar()">EDITAR</span>
                             </button>
                         </div>
 
                         <div class="boxBotao">
                             <button>
-                                <span onclick="salvar()">SALVAR</span>
-                            </button>
-                        </div>
-
-                        <div class="boxBotao">
-                            <button>
-                                <span onclick="excluir()">EXCLUIR</span>
+                                <span onclick="deletar()">DELETAR</span>
                             </button>
                         </div>
                     </div>
@@ -110,18 +110,7 @@
                     <span> DIÁRIOS ANTIGOS</span>
                 </div>
                 <div class="entradasAntigas">
-                    <div class="linhaEntradasAntigas">
-                        <span id="linha4" onclick="procurar4()">Entrada 4</span>
-                    </div>
-                    <div class="linhaEntradasAntigas">
-                        <span id="linha3" onclick="procurar3()" class="tituloDasUltimas">Entrada 3</span>
-                    </div>
-                    <div class="linhaEntradasAntigas">
-                        <span id="linha2" onclick="procurar2()">Entrada 2</span>
-                    </div>
-                    <div class="linhaEntradasAntigas">
-                        <span id="linha1" onclick="procurar1()">Entrada 1</span>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -135,68 +124,64 @@
 
 <script>
 
-    var nome = sessionStorage.NOME_USUARIO;
+    var nome = sessionStorage.NOME_USUARIO; 
     nomeUsuario.innerHTML += nome;
 
-    // Puxando o id do usuario da sessionStorage que declarei no login.html. Quando ele se loga, salva os dados que vieram do banco na sessionStorage 
     var idUsuario = sessionStorage.ID_USUARIO;
 
-    window.onload = function buscarUltimosQuatro() { // carregar sempre quando a pagina recarregar
-        fetch(`diarios/ultimos/${idUsuario}`, { // diarios = diarios.js 
-            method: 'GET'
+    var idDiarioSelecionado;
+
+    // essa função é chamada quando um diario antigo é selecionado. ela recebe o indice i e um array diarios como parametro.
+    function selecionarDiario(i, diarios) {
+        idDiarioSelecionado = diarios[i].idDiario;
+        input_tituloDiario.value = diarios[i].Titulo;
+        conteudoDiario.value = diarios[i].Conteudo;
+
+        document.getElementById('btn_editar').style.display = 'inline-block';
+        document.getElementById('btn_deletar').style.display = 'inline-block';
+        document.getElementById('btn_salvar').style.display = 'none';
+    }
+
+    function buscardiarios() {
+
+        fetch(`diarios/buscarDiarios/${idUsuario}`, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+            },
         })
-
-            .then(function (resposta) {
-                console.log("resposta:", resposta);
-
-                if (resposta.ok) {
-                    resposta.json().then((diarios) => {
-                        sessionStorage.DIARIOS = JSON.stringify(diarios)
-                    });
-
-                } else {
-                    throw "Houve um erro ao tentar buscar os diários!";
-                }
-            })
-            .catch(function (resposta) {
-                console.log(`#ERRO: ${resposta}`);
-
-            });
-
+        .then(response => response.json())
+        .then(data => exibirDiarios(data.diarios))
+        .catch(error => console.error('Erro:', error));
     }
 
-    var diarioServer = JSON.parse(sessionStorage.DIARIOS);
+    function exibirDiarios(diarios) {
+    var divEntradasAntigas = document.querySelector('.entradasAntigas');
+    divEntradasAntigas.innerHTML = '';
 
-    linha4.innerHTML = diarioServer[0].Titulo;
-    linha3.innerHTML = diarioServer[1].Titulo;
-    linha2.innerHTML = diarioServer[2].Titulo;
-    linha1.innerHTML = diarioServer[3].Titulo;
+    for (var i = 0; i < diarios.length; i++) {
+        var divLinha = document.createElement('div');
+        divLinha.className = 'linhaEntradasAntigas';
 
-    function procurar4() {
-        input_tituloDiario.value = diarioServer[0].Titulo;
-        conteudoDiario.value = diarioServer[0].Conteudo;
+        var spanDiario = document.createElement('span');
+        spanDiario.id = 'linha';
+        spanDiario.setAttribute('data-idDiario', diarios[i].idDiario);
 
+
+        (function (index) {
+            spanDiario.onclick = function () {
+                selecionarDiario(index, diarios);
+            };
+        })(i);
+
+        spanDiario.innerHTML = diarios[i].Titulo;
+
+        divLinha.appendChild(spanDiario);
+        divEntradasAntigas.appendChild(divLinha);
     }
+}
 
-    function procurar3() {
-        input_tituloDiario.value = diarioServer[1].Titulo;
-        conteudoDiario.value = diarioServer[1].Conteudo;
-
-    }
-
-    function procurar2() {
-        input_tituloDiario.value = diarioServer[2].Titulo;
-        conteudoDiario.value = diarioServer[2].Conteudo;
-
-    }
-    function procurar1() {
-        input_tituloDiario.value = diarioServer[3].Titulo;
-        conteudoDiario.value = diarioServer[3].Conteudo;
-
-    }
-
-
-    function salvar() {
+    function criar() {
         var tituloVar = input_tituloDiario.value;
         var conteudoVar = conteudoDiario.value;
 
@@ -216,27 +201,77 @@
                 console.log("resposta: ", resposta);
 
                 if (resposta.ok) {
+                    window.location = "diario.html";
+                    alert("Diário criado com sucesso!")
+
                     cardErro.style.display = "block";
-
-                    mensagem_erro.innerHTML =
-                        "Diário salvo com sucesso!";
-
-                    setTimeout(() => {
-                        window.location = "diario.html";
-                    }, "2000");
-
-
+                    mensagem_erro.innerHTML = "Diário criado com sucesso!";
                 } else {
                     throw "Houve um erro ao tentar salvar o diário!";
                 }
             })
             .catch(function (resposta) {
                 console.log(`#ERRO: ${resposta}`);
-
             });
 
         return false;
+    }
 
+    function editar() {
+        var tituloVar = input_tituloDiario.value;
+        var conteudoVar = conteudoDiario.value;
+
+        fetch(`diarios/editar/${idDiarioSelecionado}`, {
+            method: 'PUT',
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+                titulo: tituloVar,
+                conteudo: conteudoVar,
+            }),
+        })
+
+            .then(function (resposta) {
+                console.log("resposta: ", resposta);
+
+                if (resposta.ok) {
+                    window.location = "diario.html";
+                    alert("Diário editado com sucesso!")
+
+                    cardErro.style.display = "block";
+                    mensagem_erro.innerHTML = "Diário editado com sucesso!";
+                } else {
+                    throw "Houve um erro ao tentar editar o diário!";
+                }
+            })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
+            });
+        return false;
+    }
+
+
+    function deletar() {
+        fetch(`diarios/deletar/${idDiarioSelecionado}`, {
+            method: "DELETE",
+            headers: {
+                "Content-Type": "application/json"
+            }
+        }).then(function (resposta) {
+
+            if (resposta.ok) {
+                window.location = "diario.html";
+                alert("Diário deletado com sucesso!")
+
+            } else if (resposta.status == 404) {
+                window.alert("Diário não encontrado para deleção");
+            } else {
+                throw ("Houve um erro ao tentar realizar a postagem! Código da resposta: " + resposta.status);
+            }
+        }).catch(function (resposta) {
+            console.log(`#ERRO: ${resposta}`);
+        });
     }
 
     function telaMetricas() {
@@ -250,6 +285,10 @@
     function telaSair() {
         window.location.href = "index.html"
     }
+
+    window.onload = function () {
+        buscardiarios();
+    };
 </script>
 
 </html>
