--- a/site/public/diario.html
+++ b/site/public/diario.html
@@ -74,26 +74,24 @@
                     </div>
 
                     <div class="caixaConteudo">
-                        <label for="conteudoDiario" id="titDiario">Escreva aqui seus pensamentos:</label>
+                        <label for="conteudoDiario">Escreva aqui seus pensamentos:</label>
                         <textarea id="conteudoDiario" name="conteudoDiario" rows="12" cols="60"
                             style="resize: both;"></textarea>
                     </div>
 
                     <div class="caixinhaBotao">
                         <div class="boxBotao">
-                            <button>
+                            <button id="btn_salvar">
                                 <span onclick="criar()">CRIAR NOVO</span>
                             </button>
                         </div>
-
                         <div class="boxBotao">
-                            <button>
+                            <button id="btn_editar"  style="display: none;">
                                 <span onclick="editar()">EDITAR</span>
                             </button>
                         </div>
-
                         <div class="boxBotao">
-                            <button>
+                            <button id="btn_deletar" style="display: none;">
                                 <span onclick="deletar()">DELETAR</span>
                             </button>
                         </div>
@@ -110,7 +108,7 @@
                     <span> DIÁRIOS ANTIGOS</span>
                 </div>
                 <div class="entradasAntigas">
-
+        
                 </div>
             </div>
         </div>
@@ -123,15 +121,14 @@
 </body>
 
 <script>
+    var idDiarioSelecionado; 
 
-    var nome = sessionStorage.NOME_USUARIO; 
+    var nome = sessionStorage.NOME_USUARIO;
+
     nomeUsuario.innerHTML += nome;
 
     var idUsuario = sessionStorage.ID_USUARIO;
 
-    var idDiarioSelecionado;
-
-    // essa função é chamada quando um diario antigo é selecionado. ela recebe o indice i e um array diarios como parametro.
     function selecionarDiario(i, diarios) {
         idDiarioSelecionado = diarios[i].idDiario;
         input_tituloDiario.value = diarios[i].Titulo;
@@ -142,7 +139,7 @@
         document.getElementById('btn_salvar').style.display = 'none';
     }
 
-    function buscardiarios() {
+    function buscarDiarios() {
 
         fetch(`diarios/buscarDiarios/${idUsuario}`, {
             method: 'GET',
@@ -287,7 +284,7 @@
     }
 
     window.onload = function () {
-        buscardiarios();
+        buscarDiarios();
     };
 </script>
 
