--- a/site/public/index.html
+++ b/site/public/index.html
@@ -24,9 +24,9 @@
             <ul class="navbar">
 
                 <li><a href="#sobre">SOBRE A SÉRIE</a></li>
-                <li><a href="#espécies">ESPÉCIES</a></li>
+                <li><a href="#especies">ESPÉCIES</a></li>
                 <li><a href="#personagens">PERSONAGENS</a></li>
-                <li><a href="#sobremim">SOBRE MIM</a></li>
+                <li><a href="#sobreMim">SOBRE MIM</a></li>
                 <li class="login-link">
                     <div class="frame-login" onclick="telaLogin()">ACESSAR</div>
                 </li>
@@ -72,7 +72,7 @@
             pessoal <br> para suas palavras. <br> Sua criatividade é bem-vinda!</p>
 
         <div class="cadastre" onclick="cadastrar()">
-            <p> CADASTRE-SE!</p>
+            <p><b> Cadastre-se!</b></p>
         </div>
     </div>
 
@@ -91,7 +91,7 @@
                     <p>Cidade de Mystic Falls, Virgínia </p>
                 </div>
 
-                <div class="caixaDireita">
+                <div class="caixaDireita" id="sobre">
                     <h2> Sobre a Série </h2>
                     <p>
                         "The Vampire Diaries" é uma série de televisão que combina elementos de romance, drama
@@ -132,7 +132,7 @@
 
 
 
-    <div class="conteudo2">
+    <div class="conteudo2" id="especies">
         <br>
         <div class="containerTitulo">
             <div>
@@ -183,7 +183,7 @@
 
 
     <div class="conteudo3">
-        <div class="containerTitulo">
+        <div class="containerTitulo" id="personagens">
             <div>
                 <h1 class="TituloSessao"> Personagens </h1>
                 <div class="linhaTitulo"></div>
@@ -318,7 +318,7 @@
         <h1>Valores</h1>
         <br> <br> <br>
         <div class="linhaValores">
-            <p>Registro de Memórias</p>
+            <p> Registro de Memórias</p>
             <p> Autoconhecimento</p>
             <p> Expressão pessoal</p>
         </div>
@@ -333,7 +333,7 @@
         </div>
 
 
-        <div class="boxSobreMim">
+        <div class="boxSobreMim" id="sobreMim">
             <p>
                 <b>Amanda Geovanna, 22 anos de idade, sou apaixonada por gatos, livros de ficção e de
                     autoconhecimento.</b> Gosto de jogar jogos de mundo aberto nas horas vagas e de <b>desbravar a
@@ -343,9 +343,7 @@
 
                 <b>Estou em formação para me tornar uma desenvolvedora de sistemas</b>, sendo que a área que mais me
                 identifico é a de <b>front-end</b>. Minha afinidade com o design e a oportunidade de explorar minha
-                criatividade são os elementos que mais me atraem nessa área. Na época escolar, era frequentemente
-                questionada por meus professores sobre a possibilidade de seguir uma carreira artística, já que meus
-                cartazes chamavam bastante atenção pelo aspecto estético. Movida pelo desejo de ajudar as pessoas,
+                criatividade são os elementos que mais me atraem nessa área.  Movida pelo desejo de ajudar as pessoas,
                 acabei caindo de paraquedas no curso de Enfermagem, no entanto, não me identifiquei, pois sentia que
                 estava sendo limitada. <b>Descobri então que poderia ajudar as pessoas de outra maneira, colocando em
                     prática minha personalidade e interesses: tecnologia, curiosidade e a parte artistica.</b> <br> <br>
