alterei estilização das caixas de sobre a série

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -85,14 +85,18 @@
 
             <div class="recipienteColunasSobre">
                 <div class="caixaEsquerda">
+                    <div class="tituloCidade"> 
+                        <p> A CIDADE </p> 
+                    </div>
                     <div class="imagemCaixaEsquerda">
                         <img class="imgCidade" src="assets/paginaInicial/torre.jpg" />
                     </div>
-                    <p>Cidade de Mystic Falls, Virgínia </p>
+                    <p><b class="MysticFalls">Mystic Falls, Virgínia</b></p> 
+                    <p> Torre do Relógio </p>
                 </div>
 
                 <div class="caixaDireita" id="sobre">
-                    <h2> Sobre a Série </h2>
+                    <div class="fundocaixaDireita"> <h2> Sobre a Série </h2> </div>
                     <p>
                         "The Vampire Diaries" é uma série de televisão que combina elementos de romance, drama
                         sobrenatural e suspense. A série se passa na fictícia cidade de Mystic Falls, Virgínia, e segue
