adicionei função aguardar e alterei senha no config

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -54,6 +54,10 @@
         window.location.href = "cadastro.html"
     }
 
+    function aguardar() {
+    var divAguardar = document.getElementById("div_aguardar");
+     divAguardar.style.display = "flex";
+}
 
     function entrar() {
         aguardar();
